2011-03-31 Theodor Nolte <nolte_t AT informatik.haw-hamburg.de>

        * Set haw2iCalendar under the terms of the GPLv3.

2011-03-31 Theodor Nolte <nolte_t AT informatik.haw-hamburg.de>

        * Code sub-divided into modules (hawModel and
         hawModel.veranstaltungen)

2011-03-31 Theodor Nolte <nolte_t AT informatik.haw-hamburg.de>

        * faecher.py: faecher renamed to infFaecher. etechFaecher: new.
         faecher now is a merge of both. Due to clashes in the abbreviations
         for courses in etech there is more work to do...

2011-03-30 Theodor Nolte <nolte_t AT informatik.haw-hamburg.de>

        * commandGui.py(write): The sum of written iCalendar events will now
         be reported.

        * controller.py(writeIcalendar): Returns now the sum of written
         iCalendar events.

        * commandGui.py: Invalid numbers will be catched. Several methods
         for handling user input within KeineAuswahlState.

2011-03-29 Theodor Nolte <nolte_t AT informatik.haw-hamburg.de>

        * haw2icalendar.py: Made description in usage string more clear.

2011-03-29 Theodor Nolte <nolte_t AT informatik.haw-hamburg.de>

        Several changes made to group by semestergroups enclosed in the entry
        itself instead to group by the semestergroup from the header.
        Goal: get on with the Sem_EuI.txt calendar-text file.

        * hawParser.py(declaration): token 'fach' widened with (sub) token
         'gruppe' 
        * hawParserTest.py(testDeclaration): new test-case for token 'fach'
         and 'gruppe'

        * hawParserDispatchProcessor(gruppe): new
        * hawParserDispatchProcessor(fach): returns now 'fach' and 'gruppe'

        * hawCalendar.py(__init__): changed type of param
         eventTupelLists to account for the changes in the result-format
         from the HawDispatchProcessor
