@@ -1,5 +1,3 @@
-- GPL-Lizenz-Datei beilegen
-
 - Option --prof einbauen
 
 - Logging-Infos rückmelden
